# rad

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  REFACTORING.md  WORKSPACE.md  test_tui_startup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: release.yml
Formula/: rad.rb
rad-cli/: Cargo.toml
rad-cli/src/: main.rs  search.rs
rad-core/: Cargo.toml
rad-core/src/: config.rs  ipc.rs  ipc_client.rs  lib.rs
rad-core/src/api/: client.rs  mod.rs
rad-core/src/player/: audio.rs  mod.rs  types.rs
rad-core/src/search/: parser.rs  types.rs  validation.rs
rad-core/src/storage/: favorites.rs  history.rs
rad-daemon/: Cargo.toml
rad-daemon/src/: handler.rs  main.rs
rad-tui/: Cargo.toml
rad-tui/src/: app.rs  daemon.rs  keys.rs  main.rs
rad-tui/src/app/: favorites.rs  mod.rs  navigation.rs  playback.rs  search.rs
rad-tui/src/cli/: mod.rs
rad-tui/src/ui/: help_popup.rs  layout.rs  mod.rs  player.rs  search_popup.rs  station_list.rs  status_bar.rs
src/: app.rs  config.rs  daemon.rs  ipc_client.rs  keys.rs  lib.rs  main.rs
src.backup/: ipc.rs  lib.rs  main.rs
src.backup/api/: models.rs
src.backup/player/: audio.rs
src.backup/search/: autocomplete.rs  mod.rs
src.backup/storage/: favorites.rs  mod.rs  search_history.rs
src/api/: client.rs  models.rs
src/app/: favorites.rs  mod.rs  navigation.rs  playback.rs  search.rs
src/cli/: mod.rs  search.rs
src/player/: streaming.rs
src/search/: autocomplete.rs  mod.rs  pagination.rs  parser.rs  types.rs  validation.rs
src/storage/: autovote.rs  cache.rs  mod.rs  votes.rs
src/ui/: autovote.rs  help_popup.rs  layout.rs  player.rs  popups.rs  search_popup.rs  station_list.rs  status_bar.rs
tui-kit/src/: block.rs  lib.rs  log.rs  theme.rs  toast.rs
