[workspace]
resolver = "2"
members = [
    "tui-kit",
    "rad",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Antoine"]
repository = "https://github.com/osmo-systems/rad"
homepage = "https://github.com/osmo-systems/rad"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[profile.release]
strip = true          # Remove symbols for smaller binary
opt-level = "z"       # Optimize for size
lto = true            # Link Time Optimization
codegen-units = 1     # Single codegen unit for better LTO effectiveness
panic = "abort"       # Remove unwinder, reduces binary size
