[package]
name = "rad-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for the radm radio player application"
keywords = ["radio", "audio", "player", "library"]
categories = ["multimedia::audio"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

# Crate-specific dependencies
reqwest = { version = "0.12", features = ["json", "stream"] }
ureq = "2.10"
rodio = { version = "0.19", features = ["symphonia-all"] }
trust-dns-resolver = "0.23"
bytes = "1.5"
rand = "0.8"
unicode-width = "0.1"
urlencoding = "2.1"
futures-util = "0.3.32"
stream-download = "0.24.0"
